# ML-guide

./: .gitignore  APE.ipynb  Agent_langgraph.ipynb  AirLLM.ipynb  Autogen.ipynb  Contract_analyzer.ipynb  Create_Knowledge_Graph.ipynb  Eval_STT.ipynb  Feature_engineering.ipynb  Fine_tune_Mistral7b_instruct.ipynb  Fine_tune_T5_model_QnA.ipynb  Fine_tuning_HF.ipynb  JB_FAQ_style_QA.ipynb  LM_Paraphraser.ipynb  LTX_video_generator.ipynb  Langchain_Knowledge_Graph.ipynb  Learning_TextGrad.ipynb  ML_Foundation.ipynb  Micrograd_from_scratch.ipynb  NLP_30days.ipynb  Neural_network_from_scratch.ipynb  PyTorch_fundamentals.ipynb  RAG_Generator.ipynb  RAG_hybrid_Mistral_7B_Instruct.ipynb  README.md  RepoMap.ipynb  Scrape_website_to_structure_data.ipynb  Step_back_prompting.ipynb  Transformer_from_scratch.ipynb  Vision_agent.ipynb  autonomous_agent_handson.ipynb  extract_graph.ipynb  langchain_agent.ipynb  resume_judger.ipynb  user_data_extraction.ipynb  web_voyager.ipynb
Evaluations/G-Eval/: prompt.md
agent-orchestration-framework/: README.md  pyproject.toml
agent-orchestration-framework/agent_orchestration_framework/: orchestrator.py
agent-orchestration-framework/agent_orchestration_framework/agents/: agent.py
agent-orchestration-framework/agent_orchestration_framework/tools/: tool.py
agent-orchestration-framework/agent_orchestration_framework/types/: types.py
agent-orchestration-framework/agent_orchestration_framework/utils/logger/: logger.py  logger_config.py
autocomplete/: README.md  autocomplete.d.ts  autocomplete.js  index.html
autocomplete/evaluation/: accuracy.ts
autocomplete/scripts/: generate_ngram_frequency_distribution.py
career-coach/: .gitignore  FOLDER_STRUCTURE.md  README.md  components.json  generate-tasks.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
career-coach/playwright/: helpers.js  (+1 more)
code-migration-llm/: README.md  index.js  package.json  react_hook_form_v6_to_v7_migration.md  tokenization.js
crew-ai/: README.md  config.py  main.py  myoutput.txt  pyproject.toml
crew-ai/crew_ai/: readme.md  sample.py
crew-ai/crew_ai/config/: config.py
crew-ai/crew_ai/flight-recommender/: agent.py  main.py  myoutput.txt  playground-output.text  playground.py  tasks.py
crew-ai/crew_ai/flight-recommender/tools/: amadeus-response.json  amadeus_tool.py  scraper_tool.py  search_internet.py
crew-ai/crew_ai/flight_recommender/: agent.py  app.py  cli.py  myoutput.txt  playground-output.text  playground.py  tasks.py  travel_buddy.py  utils.py
crew-ai/crew_ai/flight_recommender/tools/: amadeus_tool.py  get_current_weather_tool.py  search_internet.py
crew-ai/immi_assistant/immi_assistant/: agent.py  app.py  cli.py  immi_assistant.py  tasks.py  utils.py
crew-ai/immi_assistant/immi_assistant/tools/: search_internet.py
e2e-ai-autoamted-testing/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
e2e-ai-automated-testing/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
image-to-video/: .env.sample  README.md  pyproject.toml
image-to-video/image_to_video/: file.py  logger.py  main.py  model.py  movie.py  prompts.py
langchain-graph/: main.py  myoutput.txt  pyproject.toml  utils.py
language-tutor-llm/: .env.example  README.md  app.py  chatbot.py  cli.py  pyproject.toml
language-tutor-llm/prompts/: mistral.py  mythomax.py
mcp-agent/: .gitignore  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
my-guiding-principle/: .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
prompt-engineering/: COSTAR.md  ReAct.md  meta-prompting.md  task-decomposition.md  tree-of-thought.md
prompts/: bias-detector.prompt.md  persona.agent.md
video-analysis/: main.py
web_voyager/: web_voyager.ipynb
(+171 files in other folders)
