[tool.poetry]
name = "crew-ai"
version = "0.1.0"
description = ""
authors = ["Joshua C Alpuerto <joshuacalpuerto@gmail.com>"]
readme = "README.md"
packages = [{include = "crew_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.1.17"
urllib3 = "^1.26.16"  # Needed cause of a bug in poetry
duckduckgo-search = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
