[tool.poetry]
name = "image_to_video"
version = "0.1.0"
description = ""
authors = ["Joshua C Alpuerto <joshuacalpuerto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.59"
fireworks-ai = "^0.15.10"
python-dotenv = "^1.0.1"
moviepy = "v1.0.3"
opencv-python = "^4.10.0.84"
python-json-logger = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
