[tool.poetry]
name = "langchain-graph"
version = "0.1.0"
description = ""
authors = ["Joshua C Alpuerto <joshuacalpuerto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-community = "^0.0.32"
python-dotenv = "^1.0.1"
langgraph = "^0.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
