[tool.poetry]
name = "language-tutor-llm"
version = "0.1.0"
description = ""
authors = ["Joshua C Alpuerto <joshuacalpuerto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fireworks-ai = "^0.9.0"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
langchain = "^0.0.325"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
